# diploma

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py
diary/templates/diary/: base.html  entry_delete.html  entry_detail.html  entry_form.html
diary/templates/registration/: login.html  register.html
diary_project/: asgi.py  settings.py  urls.py  wsgi.py
